# generic-ga

./: CMakeLists.txt  GA.hpp  Helper.hpp  Individual.hpp  README  README.MD  test.cpp
include/: GA.hpp  Helper.hpp  Individual.hpp  ParallelGA.hpp
test/: CMakeLists.txt  test.cpp
